--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -176,7 +176,7 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Iceland]] || [[Image:ISLcoat.gif|120px]]
 |-
-| [[India]] || [[Image:EmblemofIndia-small.png|center]]
+| [[India]] || [[Image:Emblem of India.svg|100px|center]]
 |-
 | [[Indonesia]] || [[Image:Indonesiacoatofarms.jpg|120px]]
 |-
