robot  Ajoute: mk

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -54,6 +54,7 @@
 [[lb:Benoît XVI. (Poopst)]]
 [[li:Benedictus XVI]]
 [[lt:Benediktas XVI]]
+[[mk:Бенедикт XVI]]
 [[mo:Папа Бенедикт ал ⅩⅥ-ля]]
 [[ms:Paus Benedict XVI]]
 [[nap:Papa Benedetto XVI]]
