*Empty MediaWiki Message*

--- a/Denis_Sassou_N’Guesso.mw
+++ b/Denis_Sassou_N’Guesso.mw
@@ -1,4 +1,4 @@
-'''Denis {{smcp|Sassou}} N’Guesso''' ('''Deni Sasu N’gweso''' na lokóta ya [[lingála]]) ezalí [[Mokambi-Ekólo]] na [[Kɔ́ngɔ-Brazzaville]].
+'''Denis {{smcp|Sassou}} N’guesso''' ('''Deni Sasu N’gweso''' na lokóta ya [[lingála]]) ezalí [[Mokambi-Ekólo]] na [[Kɔ́ngɔ-Brazzaville]].
 
 {{ndámbo}}
 [[Category:Kɔ́ngɔ-Brazzaville]]
