link Denis Sassou N’Guesso

--- a/Kongó-Brazzaville.mw
+++ b/Kongó-Brazzaville.mw
@@ -12,7 +12,7 @@ mbóka-mokonzi 		= [[Brazzaville]]|
 engúmba_monɛ́nɛ 	= [[Brazzaville]]|
 loléngé_lɛ́ta  	= [[Republiki]]|
 babengí_mokambi	= [[Bakambi ekólo Kɔ́ngɔ-Brazzaville|Mokonzi wa ekólo]] <br />&nbsp;- [[Mokambi Bulamatari na yě]]|
-nkómbó_mokambi 	= [[Denis Sassou-Nguesso]] <br /> [[Isidore Mvouba]]|
+nkómbó_mokambi 	= [[Denis Sassou N’Guesso|Deni Sasu N’gweso]] <br /> [[Isidore Mvouba]]|
 etando 			= 342 000|
 etando_limati		=ya 62|
 etando_bonɛ́nɛ		=|
