ndáko ya bokɔnɔ

--- a/Ndáko_ya_bokɔnɔ.mw
+++ b/Ndáko_ya_bokɔnɔ.mw
@@ -1,8 +1,8 @@
-[[Image:Physician in hospital sickroom printed 1682.jpg|thumb|A physician visiting the [[sick]] in a hospital. German [[engraving]] from 1682.]]
+[[Image:Physician in hospital sickroom printed 1682.jpg|thumb|<!--A physician visiting the [[sick]] in a hospital. German [[engraving]] from 1682-->]]
 
-Soki biloko ya [[doktolo]] ezali kobikisa yo te, to ozali na posa ya biloko eleki ye, sikoyo ye moko akopesa yo mokanda okende na '''lopital'''. Okoki te kokende mpo olingi, ye doktolo nayo moko kaka akotinda yo.
+Soki biloko ya [[doktolo]] ezali kobikisa yo te, to ozali na posa ya biloko eleki ye, sikoyo ye moko akopesa yo mokanda okende na '''ndáko ya bokɔnɔ''' (tǒ '''lopital'''). Okoki te kokende mpo olingi, ye doktolo nayo moko kaka akotinda yo.
 
-
+ 
 [[Category:Móngana]]
 [[Category:Nzoto kolongono]]
 
