*Empty MediaWiki Message*

--- a/Idrojɛ́ní.mw
+++ b/Idrojɛ́ní.mw
@@ -3,7 +3,7 @@
 |-
 | align=center colspan=2 | [[Image:H%2C1.jpg|250px]]
 |-
-! align=center bgcolor=#C0C0C0 colspan=2 | Propriétés générales
+! align=center bgcolor=#C0C0C0 colspan=2 | Makoki bayike
 |-
 | colspan=2 |
 {| width="100%" border=0 cellspacing=0
@@ -35,7 +35,7 @@
 ! align=left bgcolor=#E0E0E0 | [[Lángi]]
 | Ezate
 |-
-! align=center bgcolor=#C0C0C0 colspan=2 | Propriétés atomiques
+! align=center bgcolor=#C0C0C0 colspan=2 | Makoki ya baatome
 |-
 ! align=left bgcolor=#E0E0E0 | [[Masi ya atome]] 
 | 1,00794 [[lyoko ya masi ya atome|u]]
@@ -61,7 +61,7 @@
 ! align=left bgcolor=#E0E0E0 | [[Structure cristalline|Structure<br />cristalline]]
 | {{{liens_structures|[[Exagonal]]}}}
 |-
-! align=center bgcolor=#C0C0C0 colspan=2 | Propriétés physiques
+! align=center bgcolor=#C0C0C0 colspan=2 | Makoki ya Fiziki
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | [[état de la matière|État ordinaire]]
 | Gaz
@@ -88,7 +88,7 @@
 ! align=left bgcolor=#E0E0E0 | [[Vitesse du son]]
 | 1 270 [[mètre par seconde|m/s]] à 20 °C
 |-
-! align=center bgcolor=#C0C0C0 colspan=2 | Divers
+! align=center bgcolor=#C0C0C0 colspan=2 | Misusu
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | [[Électronégativité]]<br />([[échelle de Pauling|Pauling]])
 | 2,2
