*Empty MediaWiki Message*

--- a/Idrojɛ́ní.mw
+++ b/Idrojɛ́ní.mw
@@ -61,7 +61,7 @@
 ! align=left bgcolor=#E0E0E0 | [[Structure cristalline|Structure<br />cristalline]]
 | {{{liens_structures|[[Exagonal]]}}}
 |-
-! align=center bgcolor=#C0C0C0 colspan=2 | Makoki ya Fiziki
+! align=center bgcolor=#C0C0C0 colspan=2 | Makoki ya  Fízíkí 
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | [[état de la matière|État ordinaire]]
 | Gaz
