--- a/Oksijɛ́ní.mw
+++ b/Oksijɛ́ní.mw
@@ -113,3 +113,77 @@
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | 4<sup>e</sup> potentiel d'ionisation
 | 7469,2 kJ/mol
+!isotope
+|- valign=top
+|isotope instable | isotope={{p|15}}O | an=''[[Radioisotope synthétique|syn]]'' | pr=2 [[minute (temps)|min]] | md=[[β]]<sup>+</sup> | ed=1,72 | pd<sup>15</sup>[[Azoti|N]]
+|- valign=top
+|isotope stable | isotope<sup>16</sup>O | an=99,762 | n=8 
+|- valign=top
+|isotope stable | isotope<sup>17</sup>O | an=0,038  | n=9
+|- valign=top
+|isotope stable | isotope<sup>18</sup>O | an=0,2    | n=10
+
+
+[[af:Suurstof]]
+[[als:Sauerstoff]]
+[[ar:أكسجين]]
+[[ast:Oxíxenu]]
+[[bg:Кислород]]
+[[ca:Oxigen]]
+[[cs:Kyslík]]
+[[cy:Ocsigen]]
+[[da:Ilt]]
+[[de:Sauerstoff]]
+[[el:Οξυγόνο]]
+[[en:Oxygen]]
+[[eo:Oksigeno]]
+[[es:Oxígeno]]
+[[et:Hapnik]]
+[[eu:Oxigeno]]
+[[fa:اکسیژن]]
+[[fi:Happi]]
+[[ga:Ocsaigin]]
+[[gd:Àile-Beatha]]
+[[gl:Osíxeno (elemento)]]
+[[gu:ઑક્સીજન]]
+[[he:חמצן]]
+[[hr:Kisik]]
+[[hu:Oxigén]]
+[[ia:Oxygeno]]
+[[id:Oksigen]]
+[[io:Oxo]]
+[[is:Súrefni]]
+[[it:Ossigeno]]
+[[ja:酸素]]
+[[ko:산소]]
+[[ku:Oksîjen]]
+[[la:Oxygenium]]
+[[li:Zoerstof]]
+[[lt:Deguonis]]
+[[lv:Skābeklis]]
+[[mi:Hāora]]
+[[mk:Кислород]]
+[[ms:Oksigen]]
+[[nds:Suerstoff]]
+[[nl:Zuurstof]]
+[[nn:Oksygen]]
+[[no:Oksygen]]
+[[pl:Tlen]]
+[[pt:Oxigénio]]
+[[ro:Oxigen]]
+[[ru:Кислород]]
+[[sh:Kiseonik]]
+[[simple:Oxygen]]
+[[sk:Kyslík]]
+[[sl:Kisik]]
+[[sr:Кисеоник]]
+[[su:Oksigén]]
+[[sv:Syre]]
+[[th:ออกซิเจน]]
+[[tl:Oksihena]]
+[[tr:Oksijen]]
+[[ug:ئوكسىگېن]]
+[[uk:Кисень]]
+[[vi:Ôxy]]
+[[zh:氧]]
+[[zh-yue:氧]]
