*Empty MediaWiki Message*

--- a/Kaboni.mw
+++ b/Kaboni.mw
@@ -129,3 +129,67 @@
 |Isotope instable |isotope<sup>14</sup>C | an=[[trace radioisotope|''trace'']] | pr=5730 [[Mbula|Bambula]] 
 |- valign=top
 | md=[[désintégration β|β<sup>-</sup>]] | ed=0,156 | pd=<sup>14</sup>[[azoti|N]]
+
+[[af:Koolstof]]
+[[ar:كربون]]
+[[bg:Въглерод]]
+[[bn:কার্বন]]
+[[ca:Carboni]]
+[[cs:Uhlík]]
+[[cy:Carbon]]
+[[da:Carbon]]
+[[de:Kohlenstoff]]
+[[el:Άνθρακας]]
+[[en:Carbon]]
+[[eo:Karbono]]
+[[es:Carbono]]
+[[et:Süsinik]]
+[[eu:Karbono]]
+[[fa:کربن]]
+[[fi:Hiili]]
+[[gd:Gualan]]
+[[gl:Carbono (elemento)]]
+[[gu:કાર્બન]]
+[[he:פחמן]]
+[[hr:Ugljik]]
+[[hu:Szén]]
+[[ia:Carbon (elemento)]]
+[[id:Karbon]]
+[[io:Karbo]]
+[[is:Kolefni]]
+[[it:Carbonio]]
+[[ja:炭素]]
+[[jbo:tabno]]
+[[ko:탄소]]
+[[la:Carbonium]]
+[[lb:Kuelestoff]]
+[[li:Koolstof]]
+[[lt:Anglis]]
+[[lv:Ogleklis]]
+[[mi:Waro]]
+[[mk:Јаглерод]]
+[[ms:Karbon]]
+[[nds:Kohlenstoff]]
+[[nl:Koolstof]]
+[[nn:Karbon]]
+[[no:Karbon (grunnstoff)]]
+[[oc:Carbòni]]
+[[pl:Węgiel (pierwiastek)]]
+[[pt:Carbono]]
+[[ro:Carbon]]
+[[ru:Углерод]]
+[[sh:Ugljenik]]
+[[simple:Carbon]]
+[[sk:Uhlík]]
+[[sl:Ogljik]]
+[[sr:Угљеник]]
+[[su:Karbon]]
+[[sv:Kol]]
+[[th:คาร์บอน]]
+[[tr:Karbon]]
+[[ug:كاربون]]
+[[uk:Вуглець]]
+[[vi:Cacbon]]
+[[wa:Carbone]]
+[[zh:碳]]
+[[zh-yue:碳]]
