*Empty MediaWiki Message*

--- a/Idrojɛ́ní.mw
+++ b/Idrojɛ́ní.mw
@@ -104,3 +104,82 @@
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | 1<sup>er</sup> [[ion|potentiel d'ionisation]]
 | 1 312 kJ/mol
+!Isotope
+|- valign=top
+|isotope stable   | isotope<sup>1</sup>H | an='''99,985''' | n=0 
+|- valign=top
+|isotope stable   | isotope<sup>2</sup>H | an=0,015        | n=1 
+|- valign=top
+|isotope instable | isotope<sup>3</sup>H | an=[[radioisotope synthétique|''syn.'']] | pr=12,33 a 
+|- valign=top
+| md=[[désintégration β|β<sup>-</sup>]] | ed=0,019 | pd=<sup>3</sup>[[hélium|He]]
+|- valign=top
+|isotope instable | isotope=<sup>4</sup>H | an=''syn.''| pr=? | md=[[émission de netron|n]] | ed=2,980 | pd=<sup>3</sup>[[tritium|H]]
+
+[[af:Waterstof]]
+[[ar:هيدروجين]]
+[[ast:Hidróxenu]]
+[[be:Вадарод]]
+[[bg:Водород]]
+[[ca:Hidrogen]]
+[[cs:Vodík]]
+[[cy:Hydrogen]]
+[[da:Brint]]
+[[de:Wasserstoff]]
+[[el:Υδρογόνο]]
+[[en:Hydrogen]]
+[[eo:Hidrogeno]]
+[[es:Hidrógeno]]
+[[et:Vesinik]]
+[[eu:Hidrogeno]]
+[[fa:هیدروژن]]
+[[fi:Vety]]
+[[ga:Hidrigin]]
+[[gd:Haidreagain]]
+[[gl:Hidróxeno (elemento)]]
+[[gu:હાઈડ્રોજન]]
+[[he:מימן]]
+[[hr:Vodik]]
+[[hu:Hidrogén]]
+[[ia:Hydrogeno]]
+[[id:Hidrogen]]
+[[io:Hidrogeno]]
+[[is:Vetni]]
+[[it:Idrogeno]]
+[[ja:水素]]
+[[jbo:cidro]]
+[[ka:წყალბადი]]
+[[ko:수소]]
+[[ku:Hîdrojen]]
+[[la:Hydrogenium]]
+[[li:Waterstof]]
+[[lt:Vandenilis]]
+[[lv:Ūdeņradis]]
+[[mi:Hauwai]]
+[[mk:Водород]]
+[[ms:Hidrogen]]
+[[nds:Waterstoff]]
+[[nl:Waterstof]]
+[[nn:Hydrogen]]
+[[no:Hydrogen]]
+[[oc:Idrogèn]]
+[[pl:Wodór]]
+[[pt:Hidrogénio]]
+[[ro:Hidrogen]]
+[[ru:Водород]]
+[[sh:Vodik]]
+[[simple:Hydrogen]]
+[[sk:Vodík]]
+[[sl:Vodik]]
+[[sr:Водоник]]
+[[sv:Väte]]
+[[ta:ஹைட்ரஜன்]]
+[[th:ไฮโดรเจน]]
+[[tl:Idroheno]]
+[[tr:Hidrojen]]
+[[ug:ھىدروگېن]]
+[[uk:Водень]]
+[[vi:Hiđrô]]
+[[wa:Idrodjinne]]
+[[zh:氢]]
+[[zh-yue:氫]]
