[[Category:Kémi]] [[Category:Kémi]] cat

--- a/Idrojɛ́ní.mw
+++ b/Idrojɛ́ní.mw
@@ -116,6 +116,8 @@
 |- valign=top
 |isotope instable | isotope=<sup>4</sup>H | an=''syn.''| pr=? | md=[[émission de netron|n]] | ed=2,980 | pd=<sup>3</sup>[[tritium|H]]
 
+[[Category:Kémi]]
+
 [[af:Waterstof]]
 [[ar:هيدروجين]]
 [[ast:Hidróxenu]]
