--- a/Kaboni.mw
+++ b/Kaboni.mw
@@ -130,6 +130,8 @@
 |- valign=top
 | md=[[désintégration β|β<sup>-</sup>]] | ed=0,156 | pd=<sup>14</sup>[[azoti|N]]
 
+[[Category:Kémi]]
+
 [[af:Koolstof]]
 [[ar:كربون]]
 [[bg:Въглерод]]
@@ -182,7 +184,7 @@
 [[simple:Carbon]]
 [[sk:Uhlík]]
 [[sl:Ogljik]]
-[[sr:Угљеник]]
+[[sr:Угљник]]
 [[su:Karbon]]
 [[sv:Kol]]
 [[th:คาร์บอน]]
