--- a/Azoti.mw
+++ b/Azoti.mw
@@ -90,7 +90,7 @@
 |-
 ! align=center bgcolor=#C0C0C0 colspan=2 | Misusu
 |- valign=top
-! align=left bgcolor=#E0E0E0 | [[Électronégativité]]<br />([[échelle de Pauling|Pauling]])
+! align=left bgcolor=#E0E0E0 | [[Électronégativité]]<br />([[chelle de Pauling|Pauling]])
 | 3,04
 |- valign=top
 ! align="left" bgcolor=#E0E0E0 | [[Chaleur massique]]
@@ -136,3 +136,5 @@
 | <sup>15</sup>N || 0,366 %
 | colspan=4 | N est stable avec 8 neutrons
 |}
+
+[[Category:Kémi]]
