--- a/Oksijɛ́ní.mw
+++ b/Oksijɛ́ní.mw
@@ -123,6 +123,8 @@
 |- valign=top
 |isotope stable | isotope<sup>18</sup>O | an=0,2    | n=10
 
+[[Category:Kémi]]
+
 
 [[af:Suurstof]]
 [[als:Sauerstoff]]
