--- a/Marie-Antoinette_Makayabu.mw
+++ b/Marie-Antoinette_Makayabu.mw
@@ -1,5 +1,5 @@
 '''Marie-Antoinette Makayuba''' azali [[bourgemestre]] ya [[Bandalungwa]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
-[[Category:Moto wa politiki ya Kisásá]]
-[[category:Kisásá]]
+[[Category:Moto wa politiki ya Kinsásá]]
+[[category:Kinsásá]]
