--- a/Lovodi_Kale.mw
+++ b/Lovodi_Kale.mw
@@ -1,5 +1,5 @@
 '''Lovodi Kale''' azali [[bourgemestre]] ya [[Maluku (Congo)|Maluku]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
-[[Category:Moto wa politiki ya Kisásá]]
-[[category:Kisásá]]
+[[Category:Moto wa politiki ya Kinsásá]]
+[[category:Kinsásá]]
