--- a/Charles_Mwanandeke.mw
+++ b/Charles_Mwanandeke.mw
@@ -1,5 +1,5 @@
 '''Charles Mwanandeke''' azali [[bourgemestre]] ya [[Ngaliema]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
-[[Category:Moto wa politiki ya Kisásá]]
-[[category:Kisásá]]
+[[Category:Moto wa politiki ya Kinsásá]]
+[[category:Kinsásá]]
