*Empty MediaWiki Message*

--- a/Oksijɛ́ní.mw
+++ b/Oksijɛ́ní.mw
@@ -9,7 +9,7 @@
 {| width="100%" border=0 cellspacing=0
 |-
 | rowspan=2 | -<br />↑<br />O<br />↓<br />[[Sufa|S]]
-| align=center | [[Azoti|Na]] ← O → [[Folina|F]]
+| align=center | [[Azoti|N]] ← O → [[Folina|F]]
 |- align=center valign=top
 | [[Image:O-TableImage.png|250px]]<br /><small>[[Etánda ya bileko|Etánda mobimba]]</small>
 |}
