*Empty MediaWiki Message*

--- a/Azoti.mw
+++ b/Azoti.mw
@@ -56,7 +56,7 @@
 | 2, 5
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | [[Boyangeli ya oxydation|Boyangeli(état) ya oxydation]]<br />([[oxyde]])
-| +3,5,4,2,0,-3 <br />[[acide]] fort
+| +3,5,4,2,0,-3 <br />[[acide]] ya makasi
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | [[Structure cristalline|Structure<br />cristalline]]
 | {{{liens_structures|[[Exagonal]]}}}
