*Empty MediaWiki Message*

--- a/Koloki.mw
+++ b/Koloki.mw
@@ -9,7 +9,7 @@
 {| width="100%" border=0 cellspacing=0
 |-
 | rowspan=2 | [[folina|F]]<br />↑<br />Cl<br />↓<br />[[bomo|Br]]
-| align=center | [[sufa|S]] ← C → [[alago|Ar]]
+| align=center | [[sufa|S]] ← Cl → [[alago|Ar]]
 |- align=center valign=top
 | [[Image:Cl-TableImage.png|250px]]<br /><small>[[Etánda ya bileko|Etánda mobimba]]</small>
 |}
