*Empty MediaWiki Message*

--- a/Koloki.mw
+++ b/Koloki.mw
@@ -1,5 +1,5 @@
 {| align="right" width="225px" cellpadding=4 cellspacing=0  style="margin: 0 0 1em 1em; border: 1px solid #999; border-right-width: 2px; border-bottom-width: 2px; "
-! align=center bgcolor=#909090 colspan=2 | <font size=4 color=white> ''Kaboni''
+! align=center bgcolor=#909090 colspan=2 | <font size=4 color=white> ''Koloki''
 |-
 | align=center colspan=2 | [[Image:.jpg|250px]]
 |-
