*Empty MediaWiki Message*

--- a/Azoti.mw
+++ b/Azoti.mw
@@ -138,3 +138,60 @@
 |}
 
 [[Category:Kémi]]
+
+[[af:Stikstof]]
+[[ar:نيتروجين]]
+[[ast:Nitróxenu]]
+[[bg:Азот]]
+[[bs:Azot]]
+[[ca:Nitrogen]]
+[[cs:Dusík]]
+[[cy:Nitrogen]]
+[[da:Kvælstof]]
+[[de:Stickstoff]]
+[[el:Άζωτο]]
+[[en:Nitrogen]]
+[[eo:Nitrogeno]]
+[[es:Nitrógeno]]
+[[et:Lämmastik]]
+[[eu:Nitrogeno]]
+[[fr:Azote]]
+[[fa:نیتروژن]]
+[[fi:Typpi]]
+[[gl:Nitróxeno]]
+[[he:חנקן]]
+[[hr:Dušik]]
+[[hu:Nitrogén]]
+[[ia:Nitrogeno]]
+[[id:Nitrogen]]
+[[io:Nitro]]
+[[is:Nitur]]
+[[it:Azoto]]
+[[ja:窒素]]
+[[ko:질소]]
+[[la:Nitrogenium]]
+[[li:Stikstof]]
+[[lt:Azotas]]
+[[lv:Slāpeklis]]
+[[mi:Hauota]]
+[[mk:Азот]]
+[[nl:Stikstof]]
+[[nn:Nitrogen]]
+[[no:Nitrogen]]
+[[pl:Azot]]
+[[pt:Azoto]]
+[[ro:Azot]]
+[[ru:Азот]]
+[[sh:Dušik]]
+[[simple:Nitrogen]]
+[[sk:Dusík]]
+[[sl:Dušik]]
+[[sr:Азот]]
+[[sv:Kväve]]
+[[ta:நைட்ரஜன்]]
+[[th:ไนโตรเจน]]
+[[tr:Azot]]
+[[ug:نىتروگىن]]
+[[uk:Азот]]
+[[vi:Nitơ]]
+[[zh:氮]]
