*Empty MediaWiki Message*

--- a/Kaboni.mw
+++ b/Kaboni.mw
@@ -52,7 +52,7 @@
 ! align=left bgcolor=#E0E0E0 | [[Configuration ya baélektron|Configuration<br />ya baélektron]]
 | [[Eliyúmu|He]]2[[Orbitale-s|s]]<sup>2</sup> 2[[Orbitale-p|p]]<sup>2</sup>
 |- valign=top
-! align=left bgcolor=#E0E0E0 | [[Baélektron]] na<br />[[niveau d'énergie]]
+! align=left bgcolor=#E0E0E0 | [[Baeléktron]] na<br />[[niveau d'énergie]]
 | 2, 4
 |- valign=top
 ! align=left bgcolor=#E0E0E0 | [[Boyangeli ya oxydation|Boyangeli(état) ya oxydation]]<br />([[oxyde]])
