--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -3,7 +3,7 @@
 '''Patrice Émery {{smcp|Lumumba}}''', Moyángeli mwa yambo ya Bulamatari o Kɔ́ngɔ-Kinshasa, abótámí o mobú [[Onalua]] ([[Katako-Kombé]], [[Sanukru]], [[Kasai-Oriental]]) o mokɔlɔ [[2 ya sanza ya sambo]] o mobú [[1925]] ya  mpé akúfí o [[Katanga]] o mobú [[17 ya sanza ya mɔ̌kɔ́]] o mobú [[1961]].
 
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
-[[Image:Lumumba.jpg|thumb|Patrice E. Lumumba]]
+[[Image:PatricelumumbaIISG.jpg|thumb|Patrice E. Lumumba (coll. IISG)]]
 [[Image:Patrice_Lumumba_PM_(2).jpg|thumb|Patrice E. Lumumba]]
 
 [[bg:Патрис Лумумба]]
