robot  Ajoute: bn, gd, nds-nl, zh-yue

--- a/Sánzá_ya_zómi_na_míbalé.mw
+++ b/Sánzá_ya_zómi_na_míbalé.mw
@@ -9,6 +9,7 @@
 [[ast:Avientu]]
 [[be:Сьнежань]]
 [[bg:Декември]]
+[[bn:ডিসেম্বর]]
 [[br:Kerzu]]
 [[bs:Decembar]]
 [[ca:Desembre]]
@@ -32,6 +33,7 @@
 [[fur:Dicembar]]
 [[fy:Desimber]]
 [[ga:Nollaig]]
+[[gd:An Dùbhlachd]]
 [[gl:Decembro]]
 [[he:דצמבר]]
 [[hr:Prosinac]]
@@ -59,6 +61,7 @@
 [[mr:डिसेंबर]]
 [[ms:Disember]]
 [[nap:Dicembre]]
+[[nds-nl:December]]
 [[nl:December]]
 [[nn:Desember]]
 [[no:Desember]]
@@ -92,3 +95,4 @@
 [[wa:Decimbe]]
 [[war:Disyembre]]
 [[zh:12月]]
+[[zh-yue:12月]]
