*Empty MediaWiki Message*

--- a/Sánzá_ya_zómi_na_mɔ̌kɔ́.mw
+++ b/Sánzá_ya_zómi_na_mɔ̌kɔ́.mw
@@ -1,51 +1,2 @@
-{| class="WSerieV" id="WSánzáya06" align="right" style="margin-left: 1em; margin-bottom : 2em"
-|-
-|
-{| rules="all" cellpadding="4" cellspacing="0" style="border: 1px solid #999; border-right-width: 2px; border-bottom-width: 2px"
-|- bgcolor="#ddffdd"
-| colspan="7" align="center" | [[Sánzá ya zómi na mɔ̌kɔ́|←]] '''[[Sánzá ya zómi na mɔ̌kɔ́|Sánzá ya <br/>zómi na mɔ̌kɔ́]]''' [[Sánzá ya zómi na míbalé|→]]
-|- bgcolor="#f3fff3"
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mokɔlɔ 1|1]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 2|2]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 3|3]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 4|4]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 5|5]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 6|6]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 7|7]]
-|- bgcolor="#f3fff3"
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 8|8]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 9|9]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 10|10]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 11|11]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 12|12]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 13|13]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 14|14]]
-|- bgcolor="#f3fff3"
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 15|15]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 16|16]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 17|17]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 18|18]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 19|19]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 20|20]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 21|21]]
-|- bgcolor="#f3fff3"
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 22|22]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 23|23]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 24|24]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 25|25]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 26|26]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 27|27]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 28|28]]
-|- bgcolor="#f3fff3"
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 29|29]]
-|align=center|[[Sánzá ya zómi na mɔ̌kɔ́ mikɔlɔ 30|30]]
-|&nbsp;
-|&nbsp;
-|&nbsp;
-|&nbsp;
-|&nbsp;
-|}
-|-
-|
-<!-- {{némort}} -->
-|}
+{{sánzá}}
+{{sánzá ya zómi na mɔ̌kɔ́}}
