*Empty MediaWiki Message*

--- a/Sánzá_(ntángo).mw
+++ b/Sánzá_(ntángo).mw
@@ -1,3 +1,59 @@
 Sánzá ezalí [[mokɔlɔ|mikɔlɔ]] ntúku misáto (30) tǒ ntúku misáto na mɔ̌kɔ́ (31). Ezalí [[mpɔ́sɔ]] ínei (4). Ezalaka sánzá zómí na míbalé (12) o [[mbúla]] mɔ̌kɔ́.
 
 [[Category:Ntángo|sanza]]
+[[als:Monat]]
+[[ang:Mōnaþ]]
+[[ar:شهر]]
+[[bs:Mjesec (period)]]
+[[bg:Месец]]
+[[ca:Mes]]
+[[cv:Уйăх]]
+[[cs:Měsíc (kalendářní)]]
+[[da:Måned]]
+[[de:Monat]]
+[[en:Month]]
+[[es:Mes]]
+[[eo:Monato]]
+[[eu:Hilabete]]
+[[fa:ماه (سال)]]
+[[fr:Mois]]
+[[fy:Moanne (tiid)]]
+[[gl:Mes sinódico]]
+[[hi:मास]]
+[[hr:Mjesec (period)]]
+[[io:Monato]]
+[[id:Bulan (waktu)]]
+[[ia:Mense]]
+[[is:Mánuður]]
+[[it:Mese]]
+[[he:חודש]]
+[[ka:თვე]]
+[[kw:Mis]]
+[[sw:Mwezi (wakati)]]
+[[lad:Mez]]
+[[la:Mensis]]
+[[lv:Mēnesis]]
+[[lt:Mėnuo]]
+[[hu:Hónap]]
+[[mi:Marama (maramataka)]]
+[[nl:Maand]]
+[[ja:月 (暦)]]
+[[no:Måned]]
+[[nn:Månad]]
+[[pl:Miesiąc]]
+[[pt:Mês]]
+[[ru:Месяц]]
+[[sq:Muaji]]
+[[simple:Month]]
+[[sk:Mesiac (časová jednotka)]]
+[[sl:Mesec]]
+[[sr:Месеци]]
+[[sh:Mjesec (jedinica)]]
+[[fi:Kuukausi]]
+[[sv:Månad]]
+[[tl:Buwan (panahon)]]
+[[ta:மாதம்]]
+[[tpi:Mun (bilong yia)]]
+[[tr:Ay (zaman)]]
+[[yi:מאנאט]]
+[[zh:月]]
