*Empty MediaWiki Message*

--- a/Sánzá_(ntángo).mw
+++ b/Sánzá_(ntángo).mw
@@ -1,4 +1,4 @@
-Sánzá ezalí [[ntángo]] o [[manáka]] na [[mokɔlɔ|mikɔlɔ]] ntúku misáto (30) tǒ ntúku misáto na mɔ̌kɔ́ (31). Ezalí [[mpɔ́sɔ]] ínei (4). Ezalaka sánzá zómí na míbalé (12) o [[mbúla]] mɔ̌kɔ́.
+Sánzá ezalí [[ntángo]] o [[manáka]], ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto (30) tǒ ntúku misáto na mɔ̌kɔ́ (31). Ezalí [[mpɔ́sɔ]] ínei (4). Ezalaka sánzá zómí na míbalé (12) o [[mbúla]] mɔ̌kɔ́.
 
 {{sánzá}}
 
