*Empty MediaWiki Message*

--- a/Sánzá_ya_yambo.mw
+++ b/Sánzá_ya_yambo.mw
@@ -1,2 +1,95 @@
-{{sánzá}}
 {{Sánzá ya yambo}}
+'''Sánza ya yambo''', tǒ ''yanuari'' ezalí [[sánzá (ntángo)|sánzá]] ya mɔ̌kɔ́ o [[mánaka]]. Ezalí na [[mokɔlɔ|mikɔlɔ]] ntúku misáto na mɔ̌kɔ́ (31).
+
+Mokɔlɔ ya yambo o sánzá ya yambo ezalí mokɔlɔ ya ''Bónaná elámu''.
+
+{{sánzá}}
+[[af:Januarie]]
+[[ang:Æfterra Gēola]]
+[[ar:يناير]]
+[[an:Chinero]]
+[[ast:Xineru]]
+[[be:Студзень]]
+[[bs:Januar]]
+[[br:Genver]]
+[[bg:Януари]]
+[[ca:Gener]]
+[[cv:Кăрлач]]
+[[cs:Leden]]
+[[co:Ghjennaghju]]
+[[cy:Ionawr]]
+[[da:Januar]]
+[[de:Januar]]
+[[et:Jaanuar]]
+[[el:Ιανουάριος]]
+[[en:January]]
+[[es:Enero]]
+[[eo:Januaro]]
+[[eu:Urtarril]]
+[[fa:ژانویه]]
+[[fo:Januar]]
+[[fr:Janvier]]
+[[fy:Jannewaris]]
+[[fur:Zenâr]]
+[[ga:Eanáir]]
+[[gl:Xaneiro]]
+[[ko:1월]]
+[[hr:Siječanj]]
+[[io:Januaro]]
+[[ilo:Enero]]
+[[id:Januari]]
+[[ia:Januario]]
+[[ie:Januar]]
+[[is:Janúar]]
+[[it:Gennaio]]
+[[he:ינואר]]
+[[jv:Januari]]
+[[kn:ಜನವರಿ]]
+[[ka:იანვარი]]
+[[csb:Stëcznik]]
+[[kw:Mys Genver]]
+[[ku:Rêbendan]]
+[[la:Ianuarius]]
+[[lv:Janvāris]]
+[[lb:Januar]]
+[[lt:Sausis]]
+[[li:Jannewarie]]
+[[hu:Január]]
+[[mi:Kohi-tātea]]
+[[mr:जानेवारी]]
+[[ms:Januari]]
+[[nl:Januari]]
+[[ja:1月]]
+[[nap:Jennaro]]
+[[no:Januar]]
+[[nn:Januar]]
+[[nrm:Janvyi]]
+[[oc:Genièr]]
+[[pl:Styczeń]]
+[[pt:Janeiro]]
+[[ro:Ianuarie]]
+[[ru:Январь]]
+[[se:Ođđajagimánnu]]
+[[sc:Ghennarzu]]
+[[sco:Januar]]
+[[sq:Janari]]
+[[scn:Jinnaru]]
+[[sk:Január]]
+[[sl:Januar]]
+[[sr:Јануар]]
+[[su:Januari]]
+[[fi:Tammikuu]]
+[[sv:Januari]]
+[[tl:Enero]]
+[[ta:ஜனவரி]]
+[[tt:Ğínwar]]
+[[te:జనవరి]]
+[[th:มกราคม]]
+[[vi:Tháng một]]
+[[tpi:Janueri]]
+[[tr:Ocak]]
+[[uk:Січень]]
+[[ur:جنوری]]
+[[vo:Yanul]]
+[[wa:Djanvî]]
+[[zh:1月]]
