*Empty MediaWiki Message*

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -31,7 +31,7 @@ BOTIBO_BOZIBI_moto_na_moto 	= 673|
 BOTIBO_BOZIBI_moto_na_moto_limati=ya 189|
 sovereignty_type 	=[[dipanda]] |
 established_events 	= - dipanda na [[Bɛ́lɛjika]]|
-established_dates 	= <br/>- 30-06-1960 |
+established_dates 	= <br/>- 1960-[[sánzá ya motóbá mikɔlɔ 30|06-30]]|
 mosɔlɔ 	 	= [[falánga ya Kɔ́ngɔ]]|currency_code=CFR|
 ngonga 		= [[Temps universel coordonné|UTC]] |utc_offset=+1 na +2 |
 ngonga_DST	= - | utc_offset_DST=- |
@@ -40,7 +40,7 @@ calling_code	= 243|
 footnotes 	= [[Image:Cg-map.png|290px]]|
 }}
 
-'''Republiki ya Kɔ́ngɔ Demokratiki''' ezwami na ndelo ya ye ya mwa [[30 yuni]] [[1960]], ekolo ya makoki, lipanda, bonsomi, ekangani mpe ekabwani te, ya bato, ya bokonzi bouti na bato mpe eponi eyamba yoko te.
+'''Republiki ya Kɔ́ngɔ Demokratiki''' ezwami na ndelo ya ye ya mwa [[sánzá ya motóbá mikɔlɔ 30]] [[1960]], ekolo ya makoki, lipanda, bonsomi, ekangani mpe ekabwani te, ya bato, ya bokonzi bouti na bato mpe eponi eyamba yoko te.
 
 == Lokótá ==
 
