*Empty MediaWiki Message*

--- a/30_ya_sánzá_ya_motóbá.mw
+++ b/30_ya_sánzá_ya_motóbá.mw
@@ -1,4 +1,4 @@
-[[{{PAGENAME}}]] ezalí mokɔlɔ ya 181 ya mbúla (mokɔlɔ ya 182 ya mbúla na mikɔlɔ 356) o mánaka. Bazalí mikɔlɔ 184 na mbísa na nsɔ́ngɛ́ ya mbúla.
+[[{{PAGENAME}}]] ezalí [[mokɔlɔ]] ya 181 ya [[mbúla (ntángo)|mbúla]] (mokɔlɔ ya 182 ya mbúla na mikɔlɔ 356) o [[mánaka]]. Bazalí mikɔlɔ 184 na mbísa na nsɔ́ngɛ́ ya mbúla.
 
 ==Likambo==
 * [[1960]] : [[Kɔ́ngɔ-Kinshasa]] dipanda na [[Bɛ́lɛjika]]
