*Empty MediaWiki Message*

--- a/Bontólo.mw
+++ b/Bontólo.mw
@@ -1,5 +1,6 @@
 {{ndámbo}}
-[[Image:Manet, Edouard - Blonde Woman with Bare Breasts.jpg|thumb|Ntólo epái ya mwäsí]]
+[[Image:Manet, Edouard - Blonde Woman with Bare Breasts.jpg|thumb|Ntólo epái ya mwǎsí]]
+[[Image:Piglets1.jpg|thumb|Ntólo epái ya ngulu mwasí]]
 '''Ntólo''' ezalí eténi ya [[nzóto]] ezalaka epái ya [[mwǎsí]] mwa [[moto]] mpé mwasí ya [[nyama ya mabɛ́lɛ]]. [[Libɛ́lɛ|Mabɛ́lɛ]] ezalaka eténi ya ntólo.
 
 [[Category:Eténi ya nzóto]]
