*Empty MediaWiki Message*

--- a/Nzóto.mw
+++ b/Nzóto.mw
@@ -1,21 +1,22 @@
+{{ndámbo}}
 == Moto ==
 [[Image:Human body features2.png]]
-# motó
-# elongi
-# likókiti, nkíngó*
-# libɛkɛ, libɛ́kɛ*, lipɛkɛ_
-# ntólo
-# litɔlú
-# ebóbó
-# lokéto
-# nsɔ́ka
-# ebɛlo, lokondó
-# libɔ́lɔ́ngɔ́
-# moketa
-# etíndá, litíndí
-# lokolo 
-# lobɔ́kɔ
-# molɔ́kú
+# [[motó]]
+# [[elongi]]
+# [[nkíngó]] tǒ likókiti
+# [[libɛkɛ]]
+# [[ntólo]]
+# [[litɔlú]]
+# [[ebóbó]]
+# [[lokéto]]
+# [[nsɔ́ka]]
+# [[ebɛlo]] tǒ lokondó
+# [[libɔ́lɔ́ngɔ́]]
+# [[moketa]]
+# etíndá tǒ [[litíndí]]
+# [[lokolo]]
+# [[lobɔ́kɔ]]
+# [[molɔ́kú]]
 # ?
-# esímbeli
-# lobɔ́kɔ
+# [[esímbeli]]
+# [[lobɔ́kɔ]]
