*Empty MediaWiki Message*

--- a/Mabelé.mw
+++ b/Mabelé.mw
@@ -1,4 +1,4 @@
-'''Mabelé'''
+'''Mabelé''' ezalí monzɔ́tɔ mya malíli. [[Bato|moto]] nazalaka na Mabelé.
 {{ndámbo}}
 [[Image:The Blue Marble.jpg|thumb|right|Mabelé]]
 
