*Empty MediaWiki Message*

--- a/Mabelé.mw
+++ b/Mabelé.mw
@@ -1,4 +1,4 @@
-'''Mabelé''' ezalí monzɔ́tɔ mya malíli. [[Bato|moto]] nazalaka na Mabelé.
+'''Mabelé''' ezalí monzɔ́tɔ mya malíli. [[moto|Bato]] nazalaka na Mabelé.
 {{ndámbo}}
 [[Image:The Blue Marble.jpg|thumb|right|Mabelé]]
 
