*Empty MediaWiki Message*

--- a/Moto.mw
+++ b/Moto.mw
@@ -1,5 +1,5 @@
 {{ndámbo}}
-'''Moto''' azalí na [[bomoto]], azalí o kelási [[nyama ya mabɛ́lɛ]], ya kelási ''[[Homo]]''. Moto atámbolaka na [[likolo|makolo]] mábalé na loléngé la botɛ́lɛmi.
+'''Moto''' azalí na [[bomoto]], azalí o kelási [[nyama ya mabɛ́lɛ]], ya kelási ''[[Homo]]''. Moto atámbolaka na [[likolo|makolo]] mábalé na loléngé la botɛ́lɛmi. Moto azalí na [[nzóto]] mpé na [[molímo]].
 
 [[Image:Human.png|thumb|right|150px|''[[mobáli]] na [[mwásí]]'']]
 
