*Empty MediaWiki Message*

--- a/Elongi.mw
+++ b/Elongi.mw
@@ -1,4 +1,6 @@
-'''Elongi''' ezalí eténi ya [[nzóto]] bandá [[motó]] kín’o [[nkíngó]].
+'''Elongi''' ezalí eténi ya [[nzóto]] bandá [[motó]] kín’o [[nkíngó]] mpé [[ntólo]].
 
 {{ndámbo}}
 [[Category:Eténi ya nzóto]]
+[[en:Neck]]
+[[fr:Cou]]
