*Empty MediaWiki Message*

--- a/Elongi.mw
+++ b/Elongi.mw
@@ -1,4 +1,5 @@
-'''Elongi''' ezalí eténi ya [[nzóto]] bandá [[motó]] kín’o [[nkíngó]] mpé [[ntólo]].
+[[Image:Him.jpg|thumb|Elongi ya moto mobali]]
+'''Elongi''' ezalí eténi epái ya libosó ya [[motó]]. Na [[moto]] ezalí na [[mǐso]], [[zɔlɔ]], [[monɔkɔ]], mpé [[mbángá]] 
 
 {{ndámbo}}
 [[Category:Eténi ya nzóto]]
