*Empty MediaWiki Message*

--- a/Elongi.mw
+++ b/Elongi.mw
@@ -1,5 +1,5 @@
 [[Image:Him.jpg|thumb|Elongi ya moto mobali]]
-'''Elongi''' ezalí eténi epái ya libosó ya [[motó]]. Na [[moto]] ezalí na [[mǐso]], [[zɔlɔ]], [[monɔkɔ]], mpé [[mbángá]] 
+'''Elongi''' ezalí eténi epái ya libosó ya [[motó]]. Na [[moto]] ezalí na [[lǐso|mǐso]], [[zɔlɔ]], [[monɔkɔ]], mpé [[mbángá]] 
 
 {{ndámbo}}
 [[Category:Eténi ya nzóto]]
