--- a/Libɛkɛ.mw
+++ b/Libɛkɛ.mw
@@ -1,4 +1,4 @@
-[[Image:Asian woman shoulder.jpg|Libɛkɛ lya moto mwǎsí]]
+[[Image:Asian woman shoulder.jpg|thumb|Libɛkɛ lya moto mwǎsí]]
 '''Libɛkɛ''' tǒ '''lipɛkɛ''' ezalí eténi epái ya likólo ya [[ntólo]].
 
 {{ndámbo}}
