*Empty MediaWiki Message*

--- a/Libɛkɛ.mw
+++ b/Libɛkɛ.mw
@@ -1,5 +1,5 @@
 [[Image:Asian woman shoulder.jpg|thumb|Libɛkɛ lya moto mwǎsí]]
-'''Libɛkɛ''' tǒ '''lipɛkɛ''' ezalí eténi epái ya likólo ya [[ntólo]].
+'''Libɛkɛ''' tǒ '''lipɛkɛ''' ezalí eténi epái ya likólo ya [[ntólo]]. Bizalí mabɛkɛ mábalé (2) na moto mpé na nyama.
 
 {{ndámbo}}
 [[Category:Eténi ya nzóto]]
