*Empty MediaWiki Message*

--- a/Litɔlú.mw
+++ b/Litɔlú.mw
@@ -1,4 +1,5 @@
+[[Immagine:Ombelico.JPG|Litɔlú o katí ya ebóbó.]]
 '''Litɔlú''' ezalí eténi o katí ya [[ebóbó]].
 {{ndámbo}}
-[[fr:Nombril]]
-[[en:Ombilic]]
+[[fr:Ombilic]]
+[[en:Umbilicus]]
