--- a/Litɔlú.mw
+++ b/Litɔlú.mw
@@ -1,4 +1,4 @@
-[[Immagine:Ombelico.JPG|Litɔlú o katí ya ebóbó.]]
+[[Image:Ombelico.JPG|thumb|Litɔlú o katí ya ebóbó.]]
 '''Litɔlú''' ezalí eténi o katí ya [[ebóbó]].
 {{ndámbo}}
 [[fr:Ombilic]]
