*Empty MediaWiki Message*

--- a/Libumu.mw
+++ b/Libumu.mw
@@ -1,4 +1,4 @@
-'''Ebóbó''' ezalí eténi ya [[nzóto]]. Ezalí epái [[moto]] bandá [[ntoló]] kín’o [[lokéto]].
+'''Ebóbó''' ezalí eténi ya [[nzóto]]. Ezalí epái [[moto]] bandá [[ntólo]] kín’o [[lokéto]].
 {{ndámbo}}
 [[fr:Abdomen]]
 [[en:Abdomen]]
