*Empty MediaWiki Message*

--- a/Nkíngó.mw
+++ b/Nkíngó.mw
@@ -1,4 +1,4 @@
-'''Nkíngó''' tǒ '''likókiti''' ezalí eténi ya [[nzóto]] bandá [[motó]] kín’o [[libɛkɛ]] mpé [[ntólo]].
+'''Nkíngó''' tǒ '''likókiti''' ezalí eténi ya [[nzóto]] bandá [[motó]] kín’o [[libɛkɛ]] mpé [[ntólo]]. [[Mongóngó]] ezalí eténi ya nkíngó, mpé [[ngongolí]] na moto [[mobáli]].
 
 {{ndámbo}}
 [[Category:Eténi ya nzóto|nkingo]]
