--- a/Libumu.mw
+++ b/Libumu.mw
@@ -1,3 +1,4 @@
+[[Image:Grays Anatomy image392.png|thumb|[[motungá|Mintungá]] ya ebóbó ya moto]]
 '''Ebóbó''' ezalí eténi ya [[nzóto]]. Ezalí epái [[moto]] bandá [[ntólo]] kín’o [[lokéto]].
 {{ndámbo}}
 [[fr:Abdomen]]
