*Empty MediaWiki Message*

--- a/Libumu.mw
+++ b/Libumu.mw
@@ -1,5 +1,7 @@
 [[Image:Grays Anatomy image392.png|thumb|[[motungá|Mintungá]] ya ebóbó ya moto]]
 '''Ebóbó''' ezalí eténi ya [[nzóto]]. Ezalí epái [[moto]] bandá [[ntólo]] kín’o [[lokéto]].
 {{ndámbo}}
+
+[[Category:Eténi ya nzóto]]
 [[fr:Abdomen]]
 [[en:Abdomen]]
