--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -1,7 +1,8 @@
 [[Image:Spraakfamiliar.png|thumb]] 
 [[Image:Afro-Asiatic.png|thumb]] 
 
-Ici manque un article général sur les langues
+'''Lokóta''' ezalí [[likokí]] ya kosála [[monɔkɔ]] mpɔ́ na bolobani na [[moto]] na moto.
+{{ndámbo}}
 
 voir aussi [[ndingá (monɔkɔ ya mboka)]]
 
@@ -21,7 +22,7 @@ Comment améliorer un article sur une langue?
 >> voir come exemple en anglais: http://en.wikipedia.org/wiki/Lingala_language 
 >> voir come exemple en alémanique: http://als.wikipedia.org/wiki/Lingala
 ----
-== Langues du Congo ==
+== Nkótá ya Congo ==
 Cette liste temporaire vous permet l'accès aux articles suivants pour les créer ou les améliorer. Elle sera effacé le moment donné.
 
 * [[lingála]] 
@@ -31,7 +32,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[lifalansé]]
 * [[lingɛlɛsi]]
 
-== Nkóta ya Mokili ==
+== Nkótá ya Mokili ==
 
 * [[Afrikansi]]
 * [[Belarusi]]
