--- a/Lokótá_ya_Lɛ́ta.mw
+++ b/Lokótá_ya_Lɛ́ta.mw
@@ -1,4 +1,4 @@
-'''Lokótá ya Lɛ́ta''' ezalí lokótá óyo Lɛ́ta (tǒ mpé [[bulamatari]]) ya [[esé]], tǒ mpé [[ekólo]]) mɔ̌kɔ́, aponí mpɔ̂ na kosalela na babúku, mpé na malobi makonzi na ye. Ezalaka mpé míngi-míngi lokótá óyo esalelamaka mpɔ̌ na kotangisa na kelasi ya bǎna-ekólo êná.
+'''Lokótá ya Lɛ́ta''' ezalí [[lokótá]] óyo Lɛ́ta (tǒ mpé [[bulamatari]]) ya [[esé]], tǒ mpé [[ekólo]]) mɔ̌kɔ́, aponí mpɔ̂ na kosalela na babúku, mpé na malobi makonzi na ye. Ezalaka mpé míngi-míngi lokótá óyo esalelamaka mpɔ̌ na kotangisa na kelasi ya bǎna-ekólo êná.
 
 (Ndakisa : [[lifalansé]] ezalí mɔ̌kɔ́ na káti ya nkótá míbalé ya lɛ́ta ya [[Kanadá]])
 
