*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -1,7 +1,7 @@
 [[Image:Spraakfamiliar.png|thumb]] 
 [[Image:Afro-Asiatic.png|thumb]] 
 
-'''Lokóta''' ezalí [[likokí]] ya kosála [[monɔkɔ]] mpɔ́ na bolobani na [[moto]] na moto.
+'''Lokótá''' ezalí [[likokí]] ya kosála [[monɔkɔ]] mpɔ́ na bolobani na [[moto]] na moto.
 {{ndámbo}}
 
 voir aussi [[ndingá (monɔkɔ ya mboka)]]
