*Empty MediaWiki Message*

--- a/Fízíkí.mw
+++ b/Fízíkí.mw
@@ -1,5 +1,5 @@
 {{ndámbo}}
-'''Fízíkí''' (tǒ '''fizíki''' mpé ''physique'' na lokóta ya [[lifalansé]]) ezalí [[mambí]] ma [[bizalela]] bya bilɔ́kɔ bya [[mokili]].
+'''Fízíkí''' (tǒ '''fizíki''' mpé ''physique'' na lokótá ya [[lifalansé]]) ezalí [[mambí]] ma [[bizalela]] bya bilɔ́kɔ bya [[mokili]].
 
 
 [[Category:Mambí]]
