*Empty MediaWiki Message*

--- a/Boyíké.mw
+++ b/Boyíké.mw
@@ -1,4 +1,4 @@
-''Boyíké'' elakisi míngi mpó na nkómbó o [[mambí ma lokóta]], ekɛsɛní na [[bɔ̌kɔ́]]. 
+''Boyíké'' elakisi míngi mpó na nkómbó o [[mambí ma lokótá]], ekɛsɛní na [[bɔ̌kɔ́]]. 
 
 Ndakisa : ''moto'' na bɔ̌kɔ́ ezalí ''bato'' na boyíké.
 
