*Empty MediaWiki Message*

--- a/Lingɛlɛ́sa.mw
+++ b/Lingɛlɛ́sa.mw
@@ -1,4 +1,4 @@
-'''Lingɛlɛ́sa''' ezalí [[lokótá]] ya bato ba [[Ingɛlɛ́tɛlɛ]] mpé ba [[Lisanga ya Amerika]]. Lingɛlɛ́sa ezalí [[lokóta ya Leta]] ba Kenya mpe ba Uganda.
+'''Lingɛlɛ́sa''' ezalí [[lokótá]] ya bato ba [[Ingɛlɛ́tɛlɛ]] mpé ba [[Lisanga ya Amerika]]. Lingɛlɛ́sa ezalí [[lokótá ya Lɛ́ta]] ba Kenya mpé ba Uganda.
 
 
 {{ndambo}}
