--- a/Kémi.mw
+++ b/Kémi.mw
@@ -1,5 +1,5 @@
 [[Image:Fullerene-C60.png|left|100px|<!--Une molécule de fullerène-->]]
-'''Kémi''' (tǒ '''chimie''' na lokóta ya [[lifalansé]]) ezalí [[mambí]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
+'''Kémi''' (tǒ '''chimie''' na lokótá ya [[lifalansé]]) ezalí [[mambí]] ya bokabwani ya bilɔ́kɔ, ya [[likɛ́lɛ|makɛ́lɛ]].
 Lisúsu, ezalí mayébi etalí loléngé bilɔ́kɔ ezalí kokangama yangó na yangó, mpé loléngé ezalí kobongwana.
 
 [[Atome|Baatome]] ezalí kokangama mpɔ́ ya kotonga [[molékili|bamolékili]].
